base/request-bin/deployment-config.yaml
---
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  name: request-bin
spec:
  replicas: 1
  selector:
    deploymentconfig: request-bin
  strategy:
    activeDeadlineSeconds: 21600
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: request-bin
        deploymentconfig: request-bin
    spec:
      containers:
        - env:
            - name: REDIS_URL
              value: 'redis://request-bin-redis:6379/0'
            - name: REALM
              value: prod
          image: quay.io/rh_integration/requestbin:latest
          imagePullPolicy: Always
          name: request-bin
          ports:
            - containerPort: 8000
              protocol: TCP
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
    triggers:
      - type: ConfigChange
