base/request-bin/route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: request-bin
  labels:
    app: request-bin
spec:
  to:
    kind: Service
    name: request-bin
  port:
    targetPort: gateway
